# uep

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Makefile.am  README.md  cmake_defines.hpp  cmake_defines.hpp.in  codifica_video.txt  commands.txt  configure.ac  datas.csv  fixed_errors.py  fixed_errors_var.py  get_results_markov.py  grafici.py  istruzioni_compilazione_e_debug.txt  istruzioni_installazione_debian_virtualbox.txt  launch_ec2.sh  list_data_packs.py  markov_1509867828_16491124733610827659.pickle.xz  mp_plots_ec2.sh  parameters.py  plot_fast_results_aws.py  plot_real_degdist.py  plot_uep_iid.py  plot_uep_markov.py  plot_uep_time.py  plots.py  primo stream.txt  rng.hpp  run_ber.py  run_ber.sh  run_ber_iid.py  run_ber_markov2_vs_k.py  run_ber_zero.py  run_fast_markov_rob.sh  run_many_iid.sh  run_many_markov.sh  run_many_uep.sh  (+17 more)
Testing/Temporary/: LastTest.log.tmp
averaging/: get_results_markov.py
dataset/: CREW_352x288_30_orig_01.264  CREW_352x288_30_orig_01.win.trace  stefan_cif.trace
dataset_client/: CREW_352x288_30_orig_01.264
doc/: Doxyfile
h264_scripts/: decode.sh  encode.sh  stefan.cfg  stefan_cif.cfg  stefan_cif_l0.cfg  stefan_l1.cfg
python/: uep_fast_run.py  uep_fast_runPYTHON_wrap.cxx
src/: CMakeLists.txt  Makefile.am  avg_nal_segsizes.py  base_types.cpp  base_types.hpp  ber.py  bipartite_graph.hpp  block_decoder.cpp  block_decoder.hpp  block_encoder.cpp  block_encoder.hpp  block_queues.cpp  block_queues.hpp  channel.py  client  client.cpp  controlMessage.proto  corrupt.cpp  counter.hpp  data_client_server.hpp  decoder.cpp  decoder.hpp  demo_dc  demo_dc.cpp  demo_ds  demo_ds.cpp  encoder.cpp  encoder.hpp  filter_received.cpp  flatten_iterator.hpp  get_results_markov.py  lazy_xor.hpp  log.cpp  log.hpp  lt_param_set.hpp  message_passing.hpp  message_passing_python.cpp  mp_plots.cpp  nal_overhead.cpp  nal_reader.cpp  (+58 more)
test/: CMakeLists.txt  test_block_decoder  test_block_decoder.cpp  test_block_encoder  test_block_encoder.cpp  test_counters  test_counters.cpp  test_data_client_server  test_data_client_server.cpp  test_encoder_decoder  test_encoder_decoder.cpp  test_filter.sh  test_flatten_iterator.cpp  test_lazy_xor.cpp  test_message_passing  test_message_passing.cpp  test_nal_rw.cpp  test_packet_rw.cpp  test_packets  test_packets.cpp  test_packets_rw  test_protobuf_rw.cpp  test_rng  test_rng.cpp  test_skip_iterator.cpp  test_uep_encdec.cpp
tex/: Makefile  report.aux  report.bib  report.dvi  report.out  report.tex  schemi.pptx
utils/: aws.py  jsvm.py  plots.py  stats.py  waf
